# routes/utils/MySql.js
@@ -2,39 +2,39 @@ var mysql = require('mysql');
 require("dotenv").config();
 
 
-const config={
-connectionLimit:4,
+const config = {
+  connectionLimit: 4,
   host: process.env.host,//"localhost"
   user: process.env.user,//"root"
-  password: "pass_root@123",
-  database:"mydb"
+  password: process.env.DBpass,//database pass
+  database: process.env.database//database name
 }
 const pool = new mysql.createPool(config);
 
-const connection =  () => {
+const connection = () => {
   return new Promise((resolve, reject) => {
-  pool.getConnection((err, connection) => {
-    if (err) reject(err);
-    console.log("MySQL pool connected: threadId " + connection.threadId);
-    const query = (sql, binding) => {
-      return new Promise((resolve, reject) => {
-         connection.query(sql, binding, (err, result) => {
-           if (err) reject(err);
-           resolve(result);
-           });
-         });
-       };
-       const release = () => {
-         return new Promise((resolve, reject) => {
-           if (err) reject(err);
-           console.log("MySQL pool released: threadId " + connection.threadId);
-           resolve(connection.release());
-         });
-       };
-       resolve({ query, release });
-     });
-   });
- };
+    pool.getConnection((err, connection) => {
+      if (err) reject(err);
+      console.log("MySQL pool connected: threadId " + connection.threadId);
+      const query = (sql, binding) => {
+        return new Promise((resolve, reject) => {
+          connection.query(sql, binding, (err, result) => {
+            if (err) reject(err);
+            resolve(result);
+          });
+        });
+      };
+      const release = () => {
+        return new Promise((resolve, reject) => {
+          if (err) reject(err);
+          console.log("MySQL pool released: threadId " + connection.threadId);
+          resolve(connection.release());
+        });
+      };
+      resolve({ query, release });
+    });
+  });
+};
 const query = (sql, binding) => {
   return new Promise((resolve, reject) => {
     pool.query(sql, binding, (err, result, fields) => {
